--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ letter-spacing: 0.02em;
 .overlay {
   background-image: linear-gradient(rgba(46, 47, 66, 0.7) , rgba(46, 47, 66, 0.7)), url(../images_index/people-office.jpg);
   max-width: 1440px;
+  background-size: cover;
   margin: 0 auto;
   background-position: center;
   background-repeat: no-repeat;
@@ -403,7 +404,7 @@ text-transform: capitalize;
   justify-content: center;
 }
 .partners-item {
-  width: 198px;
+  width: 168px;
   height: 88px;
 
 }
@@ -571,6 +572,7 @@ letter-spacing: 0.02em;
 .accent-btn {
   background-color: var(--accent-color);
   color: var(--white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
